--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
   },
   "dependencies": {
     "@prisma/client": "5.0.0",
-    "express": "4.18.2"
+    "dotenv": "^16.3.1",
+    "express": "4.18.2",
+    "jsonwebtoken": "^9.0.1"
   },
   "devDependencies": {
     "@types/express": "4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "18.16.19",
     "prettier": "^3.0.0",
     "prisma": "5.0.0",
