--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   },
   "dependencies": {
     "@prisma/client": "5.0.0",
-    "dotenv": "^16.3.1",
+    "bcrypt": "^5.1.0",
     "express": "4.18.2",
     "jsonwebtoken": "^9.0.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "18.16.19",
