--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@prisma/client": "5.0.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "4.18.2",
+    "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1"
   },
   "devDependencies": {
