--- a/package.json
+++ b/package.json
@@ -19,15 +19,13 @@
     "express": "4.18.2",
     "express-rate-limit": "^7.1.1",
     "helmet": "^7.0.0",
-    "jsonwebtoken": "^9.0.1"
+    "jsonwebtoken": "^9.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
-    "@types/dotenv": "^8.2.0",
     "@types/express": "4.17.17",
-    "@types/express-rate-limit": "^6.0.0",
-    "@types/helmet": "^4.0.0",
     "@types/inquirer": "^9.0.6",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "18.16.19",
